# vizia-plug

./: .gitignore  Cargo.toml  LICENSE  README.md  bundler.toml
.github/workflows/: bundle-gain-gui.yml
examples/gain_gui/: Cargo.toml
examples/gain_gui/src/: editor.rs  lib.rs  main.rs
src/: editor.rs  lib.rs  main.rs  widgets.rs
src/assets/: theme.css  widgets.css
src/widgets/: generic_ui.rs  param_base.rs  param_button.rs  param_registry.rs  param_slider.rs  peak_meter.rs  util.rs
xtask/: Cargo.toml
