[package]
name = "gain_gui"
version = "0.1.0"
edition = "2021"
authors = ["George Atkinson <geom3trik@vizia.dev>", "Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "MIT"
description = "A simple gain plugin with an vizia GUI"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["standalone"] }
vizia_plug = { path = "../../" }

atomic_float = "0.1"