[package]
name = "gain_gui"
version = "0.1.0"
edition = "2021"
authors = ["George Atkinson <geom3trik@vizia.dev>", "Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "MIT"
description = "A simple gain plugin with an vizia GUI"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nice-plug = { git = "https://codeberg.org/BillyDM/nice-plug", rev = "7e7f63049dc2250fa755bc45acb1badce8c7bd4c", features = ["standalone"] }
vizia_plug = { path = "../../" }

atomic_float = "0.1"